Cabal-tests/tests/ParserTests/errors/leading-comma-2.cabal
cabal-version:       2.4
-- too small cabal-version

name:                leading-comma
version:             0
synopsis:            leading comma, trailing comma, or ordinary
build-type:          Simple

library
  default-language: Haskell2010
  exposed-modules:
    , LeadingComma
    , LeadingComma

  build-depends: base, containers

  build-depends:
    deepseq,
    transformers,

  build-depends:
    , filepath
    , directory
